--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "embla-carousel": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "express": "^4.21.2",
     "framer-motion": "^11.11.17",
     "leaflet": "^1.9.4",
